syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Account.API";

package account;

message Empty {

}
message Request {
  int64 id = 1;
}
message Response {
bool IsSuccess = 1;
repeated Error errors = 2;
string message = 3;
}
message Error {
	string propertyName = 1;
	string message = 2;
}
message LoginRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
}

message LoginReply {
  int64 id = 1;
  string email = 2;
  google.protobuf.Int32Value Role = 3;
  bool noUser = 4;
}

message ChangePasswordRequest {
	int64 id = 1;
	google.protobuf.StringValue password = 2;
}

message RegistrationRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
  google.protobuf.Int32Value role = 3;
  google.protobuf.StringValue firstName = 4;
  google.protobuf.StringValue lastName = 5;
  google.protobuf.Timestamp DateOfBirth = 6;
  google.protobuf.Int32Value gender = 7;
}
message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue firstName = 2;
  google.protobuf.StringValue lastName = 3;
  google.protobuf.StringValue email = 4;
  google.protobuf.StringValue phoneNumber = 5;
  google.protobuf.Timestamp DateOfBirth = 6;
  google.protobuf.Int32Value gender = 7;
  google.protobuf.StringValue address = 8;
  google.protobuf.Int64Value cityId = 9;
  google.protobuf.StringValue userInfo = 10;
}
message City {
    int64 id = 1;
   string name = 2;
}
message Country {
    int64 id = 1;
   string name = 2;
}

message UserInfoResponse {
    int64 id = 1;
   string firstName = 2;
   string lastName = 3;
    string email = 4;
    google.protobuf.StringValue phoneNumber = 5;
    google.protobuf.Timestamp DateOfBirth = 6;
    google.protobuf.Timestamp RegistrationDate = 7;
    int32 gender = 8;
    google.protobuf.StringValue address = 9;
    City city = 10;
    Country country = 11;
    google.protobuf.StringValue userInfo = 12;
    google.protobuf.BytesValue profilePhoto = 13;
    google.protobuf.StringValue mimeType = 14;
    bool NoUser = 15;
}

message UserList {
    repeated UserInfoResponse users = 1;
}
service Login {
  rpc GetLoggedUser (LoginRequest) returns (LoginReply); //tested
}
service UserManipulation {
  rpc RegisterUser (RegistrationRequest) returns (Response); //tested
  rpc UpdateUser (UpdateRequest) returns (Response); //tested
  rpc DeleteUser (Request) returns (Response); //tested
  rpc ChangePassword (ChangePasswordRequest) returns (Response); //tested
}

service UserInfo {

  rpc GetUserInfo (Request) returns (UserInfoResponse); //tested
  rpc GetAllUsers (Empty) returns (UserList);
}




